k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: msa-shop-user-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        # env는 반드시 여기(containers 내부)에 있어야 합니다!
