k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-shop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: msa-shop-frontend
            port:
              number: 80
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: msa-shop-user-service
            port:
              number: 80
